--- a/css/querries.css
+++ b/css/querries.css
@@ -161,9 +161,7 @@
 47rem $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$4*/
 @media screen and (max-width: 47rem) {
   .condiments {
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
+    flex-wrap: wrap;
   }
 
   .brag h1 {
@@ -240,9 +238,6 @@
   }
 
   /*slider section*/
-  .woof-slider {
-    overflow: hidden;
-  }
 }
 /*$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 40rem $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$4*/
@@ -288,6 +283,11 @@
   .woof-slider img {
     width: 200%;
     transform: scaleX(1.3);
+  }
+
+  .pet {
+    width: 75%;
+    height: 85vh;
   }
 }
 
