--- a/css/querries.css
+++ b/css/querries.css
@@ -153,8 +153,6 @@
   .left-one {
     z-index: 1;
   }
-  .slider-text h1 {
-  }
 }
 
 /*$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
@@ -238,6 +236,9 @@
   }
 
   /*slider section*/
+  .carousels {
+    height: 42rem;
+  }
 }
 /*$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 40rem $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$4*/
@@ -255,6 +256,10 @@
 31rem $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$4*/
 @media screen and (max-width: 31rem) {
   /*slider section*/
+  /*slider section*/
+  .carousels {
+    height: 28rem;
+  }
   .left-one {
     z-index: 1;
   }
@@ -262,6 +267,7 @@
   .woof-slider {
     display: flex;
     flex-direction: column;
+    height: 65vh;
   }
 
   .woof-slider p {
@@ -287,7 +293,7 @@
 
   .pet {
     width: 75%;
-    height: 85vh;
+    height: 90vh;
   }
 }
 
@@ -301,6 +307,15 @@
 
   .image-text p {
     font-size: 0.6rem;
+  }
+
+  .Hero-box {
+    margin-top: 3rem;
+  }
+
+  .image-text a {
+    font-size: 0.5rem;
+    text-align: center;
   }
 
   .store-link {
