--- a/css/style.css
+++ b/css/style.css
@@ -519,30 +519,28 @@ yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy*/
 /*CAROUSEL SECTION*/
 
 .slider-section {
+  margin-top: 1rem;
+  width: 100%;
   margin: 0 auto;
-  margin-top: 5rem;
+  position: relative;
 }
 .carousels {
-  width: 130%;
   height: 50rem;
-  margin-top: 10rem;
-  position: relative;
+  margin-top: 1rem;
+  transition: 0.5s;
+  display: flex;
 
-  padding: 0;
-  margin: 0 auto;
-  overflow: hidden;
   background-color: rgba(255, 255, 255, 0.864);
 }
 
 .woof-slider {
   top: 10%;
-  height: 70vh;
+  height: 100vh;
   box-shadow: 0px 1px 2px 3px rgb(226, 225, 225);
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: absolute;
-  width: 80%;
+  min-width: 100%;
 }
 
 .woof-slider img {
@@ -550,12 +548,16 @@ yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy*/
 }
 
 .slider-1 {
-  background-image: url("../img/3.png");
+  background-image: url("../img/2.png");
   background-size: cover;
 }
 .slider-2 {
   background-image: url("../img/Jessica\ Kowalski2.png");
   background-size: cover;
+}
+
+.slider-2 h3 {
+  color: white;
 }
 
 .slider-3 {
@@ -582,9 +584,13 @@ yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy*/
   font-size: 1.3rem;
 }
 
-.slider-tex p {
+.slider-tex a {
+  text-decoration: none;
+  color: white;
+  font-size: 16px;
   background-color: #e67700;
-  width: 25%;
+  width: 35%;
+  margin-left: 10%;
   padding: 10px;
   text-align: center;
   cursor: pointer;
@@ -593,28 +599,37 @@ yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy*/
 
 .navigation-dots {
   position: absolute;
-  bottom: 30%;
-  left: 35%;
+  bottom: 10%;
+  left: 47%;
 }
 
 #right-one {
   position: absolute;
   background-color: white;
-  padding: 0 0.5rem;
-  top: 39%;
-  right: 23%;
+  padding: 0.8rem;
+  top: 50%;
+  right: 0%;
+  z-index: 1;
+  cursor: pointer;
 
   border-radius: 50%;
+}
+
+#right-one :hover {
+  background-color: transparent;
 }
 
 #left-one {
   position: absolute;
   background-color: white;
-  padding: 0 0.5rem;
-  top: 40%;
-  left: 0%;
-
+  padding: 0.8rem;
+  top: 50%;
   border-radius: 50%;
+  cursor: pointer;
+}
+
+#left-one :hover {
+  background-color: transparent;
 }
 
 /*yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy
@@ -625,7 +640,6 @@ yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy*/
 /*FOOTER*/
 
 .footer {
-  margin-top: 1rem;
   background-color: #f3ece4;
   border-top: 10px solid rgba(36, 35, 35, 0.089);
 }
