--- a/css/style.css
+++ b/css/style.css
@@ -385,133 +385,145 @@ yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy*/
   line-height: 24px;
 }
 
-.products {
-  display: flex;
-  justify-content: center;
-  margin-top: 75px;
-
-  padding: 10px;
+.yes {
+  margin-top: 4rem;
+  padding: 1rem;
 }
 
-.advert-pets {
-  display: flex;
-  justify-content: center;
-  max-width: 80%;
-  gap: 20px;
-  flex-wrap: wrap;
-}
-
-#pet-1:hover {
-  transform: scale(110%);
-  transition: 0.5s;
-}
-
-#pet-2:hover {
-  transform: scale(110%);
-  transition: 0.5s;
-}
-
-#pet-0:hover {
-  transform: scale(110%);
-  transition: 0.5s;
-}
-
-.pet {
-  background-image: url("../img/Jessica\ Kowalski2.png");
-  background-size: cover;
-  color: white;
-
-  box-shadow: 0px 1px 1px 1px rgb(134, 134, 134);
-  border-radius: 20px;
-  font-size: 14px;
-  background-color: white;
-}
-
-.pet img {
-  width: 100%;
-  height: 35vh;
-  box-shadow: 0px 0px 0px 1px rgb(134, 134, 134);
-  border-top-right-radius: 20px;
-  border-top-left-radius: 20px;
-}
-.pet-text {
-  padding: 24px;
-}
-
-.pet-text h1 {
-  background-color: white;
+.yes p {
+  font-weight: 600;
   font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
-  font-size: 16px;
-  padding: 10px;
-  color: #e67700;
-  box-shadow: 0px 0px 0px 1px rgb(134, 134, 134);
 }
 
-.pet-text h2 {
-  font-size: 18px;
-  font-weight: 500;
-  color: white;
-}
-
-.pet-text h3 {
-  font-weight: 500;
-  color: white;
-}
-
-.pet-text h4 {
-  font-weight: 500;
-  color: white;
-}
-
-.pet-text strong {
-  color: black;
-}
-
-.pet-text a {
-  display: block;
-  max-width: 70%;
-  padding: 10px;
-  background-color: #e67700;
-  text-decoration: none;
-}
-
-.buy-link {
+.annoucements {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 1rem;
+  height: 29rem;
+  width: 100%;
+  font-size: 0.8rem;
+  line-height: 28px;
+}
+
+.annoucements {
+  margin: 0 auto;
+}
+
+.yes h1 {
   text-align: center;
-  color: white;
-  box-shadow: 0px 1px 1px 1px rgb(134, 134, 134);
-  transform: translate(10%, 3%);
 }
 
-.buy-btn {
-  color: white;
+.annoucements p {
+  width: 60%;
 }
 
-.shop-link {
-  text-align: center;
-  margin-top: 35px;
-  font-size: 16px;
-  font-weight: 400;
-}
-
-.shop-link a {
-  text-decoration: none;
+.pic {
   background-color: #e67700;
-  box-shadow: 0px 1px 1px 1px rgb(134, 134, 134);
+  width: 2.6rem;
+  height: 7vh;
+  border-radius: 48%;
+  padding: 1rem;
+  display: flex;
+  font-size: 2.8rem;
+  justify-content: center;
+  border: solid 7px #f3ece4;
+}
 
-  padding: 12px;
+.fi-bs-pills {
   color: white;
-  border-radius: 18px;
 }
 
-.shop-link a:hover {
-  background-color: white;
-  color: #e67700;
-  transition: 0.3s;
+.fi-bs-paw {
+  color: white;
+  font-weight: 200;
 }
 
+.fi-bs-claw-marks {
+  color: white;
+}
+
+/*yes 2 */
+.no {
+  margin-top: 4rem;
+  padding: 1rem;
+}
+
+.no p {
+  font-weight: 600;
+  font-size: 0.6rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.annoucements-1 {
+  display: grid;
+  grid-template-columns: 1fr;
+
+  padding: 10px;
+  height: 29rem;
+  width: 100%;
+  font-size: 0.8rem;
+}
+
+.annoucements-1 p {
+  width: 60%;
+}
+
+.announce-2 {
+  display: flex;
+  gap: 10px;
+  box-shadow: 0px 2px 0px 0px rgb(223, 221, 221);
+}
+
+.announce-2 p {
+  font-weight: 800;
+  margin-top: 2rem;
+}
+
+.announce-2 h1 {
+  font-size: 32px;
+}
+
+.picks {
+  background-color: #e67700;
+  width: 5rem;
+  height: 15vh;
+  border-radius: 48%;
+  padding: 1rem;
+  font-size: 2.8rem;
+  justify-content: center;
+  border: solid 3px #f3ece4;
+  cursor: pointer;
+}
+
+#pickies-1 {
+  background-image: url("../img/tadeusz-lakota-tk5LWGNiWVs-unsplash.jpg");
+  background-size: cover;
+}
+
+#pickies-2 {
+  background-image: url("../img/tamara-bellis-baKsNGGKZ3w-unsplash.jpg");
+  background-size: cover;
+  width: 5rem;
+}
+
+#pickies-3 {
+  background-image: url("../img/samuel-girven-buJ6OB_q8hI-unsplash.jpg");
+  background-size: cover;
+}
+
+.fi-bs-pills {
+  color: white;
+}
+
+.fi-bs-paw {
+  color: white;
+  font-weight: 200;
+}
+
+.fi-bs-claw-marks {
+  color: white;
+}
 /*yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy
 yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy
 yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy
@@ -519,7 +531,6 @@ yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy*/
 /*CAROUSEL SECTION*/
 
 .slider-section {
-  margin-top: 1rem;
   width: 100%;
   margin: 0 auto;
   position: relative;
@@ -529,8 +540,6 @@ yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy*/
   margin-top: 1rem;
   transition: 0.5s;
   display: flex;
-
-  background-color: rgba(255, 255, 255, 0.864);
 }
 
 .woof-slider {
@@ -641,7 +650,7 @@ yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy*/
 
 .footer {
   background-color: #f3ece4;
-  border-top: 10px solid rgba(36, 35, 35, 0.089);
+  border-top: 10px solid rgba(0, 0, 0, 0.799);
 }
 
 .condiments {
